testdata/baselines/reference/conformance/typedefModuleExportsIndirect2.errors.txt
typedefModuleExportsIndirect2.js(3,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.


==== typedefModuleExportsIndirect2.js (1 errors) ====
    /** @typedef {{ a: 1, m: 1 }} C */
    const f = function() {};
    module.exports = f;
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
==== use.js (0 errors) ====
    /** @typedef {import('./typedefModuleExportsIndirect2').C} C */
    /** @type {C} */
    var c
    